fix label spacing

--- a/guide/css/framework.css
+++ b/guide/css/framework.css
@@ -349,6 +349,9 @@ label {
 .mb-0 {
   margin-bottom: 0; }
 
+.mb-xs {
+  margin-bottom: 5px; }
+
 .mb-s {
   margin-bottom: 10px; }
 
@@ -485,10 +488,6 @@ label {
 ul {
   margin: 0;
   padding: 0; }
-
-a {
-  color: #1fb6ff;
-  text-decoration: none; }
 
 .container {
   margin-right: auto;
