--- a/guide/css/includes/_utilities.sass
+++ b/guide/css/includes/_utilities.sass
@@ -10,6 +10,8 @@
 	margin-top: 80px
 .mb-0
 	margin-bottom: 0
+.mb-xs
+	margin-bottom: 5px
 .mb-s
 	margin-bottom: 10px
 .mb-m
@@ -121,6 +123,3 @@
 ul
 	margin: 0
 	padding: 0
-a 
-	color: #1fb6ff
-	text-decoration: none
